crates/ruff_python_parser/tests/snapshots/valid_syntax@function_kwargs_double_star.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/function_kwargs_double_star.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..57,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 43..56,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 43..56,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 43..46,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 46..56,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 47..55,
                                        node_index: NodeIndex(None),
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 49..55,
                                                id: Name("kwargs"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
