crates/ruff_python_parser/tests/snapshots/valid_syntax@global_in_nested_class.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/global_in_nested_class.py
---
## AST

```
Module(
    ModModule {
        range: 0..85,
        body: [
            Try(
                StmtTry {
                    range: 0..84,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 5..8,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..84,
                                type_: Some(
                                    Name(
                                        ExprName {
                                            range: 16..27,
                                            id: Name("ImportError"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Assign(
                                        StmtAssign {
                                            range: 33..38,
                                            targets: [
                                                Name(
                                                    ExprName {
                                                        range: 33..34,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                            ],
                                            value: NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 37..38,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    ClassDef(
                                        StmtClassDef {
                                            range: 43..84,
                                            decorator_list: [],
                                            name: Identifier {
                                                id: Name("f"),
                                                range: 49..50,
                                            },
                                            type_params: None,
                                            arguments: Some(
                                                Arguments {
                                                    range: 50..52,
                                                    args: [],
                                                    keywords: [],
                                                },
                                            ),
                                            body: [
                                                Global(
                                                    StmtGlobal {
                                                        range: 62..70,
                                                        names: [
                                                            Identifier {
                                                                id: Name("x"),
                                                                range: 69..70,
                                                            },
                                                        ],
                                                    },
                                                ),
                                                Assign(
                                                    StmtAssign {
                                                        range: 79..84,
                                                        targets: [
                                                            Name(
                                                                ExprName {
                                                                    range: 79..80,
                                                                    id: Name("x"),
                                                                    ctx: Store,
                                                                },
                                                            ),
                                                        ],
                                                        value: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 83..84,
                                                                value: Int(
                                                                    2,
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
        ],
    },
)
```
