crates/ruff_python_parser/tests/snapshots/valid_syntax@global_in_nested_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/global_in_nested_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..83,
        body: [
            Try(
                StmtTry {
                    range: 0..82,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 5..8,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..82,
                                type_: Some(
                                    Name(
                                        ExprName {
                                            range: 16..27,
                                            id: Name("ImportError"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Assign(
                                        StmtAssign {
                                            range: 33..38,
                                            targets: [
                                                Name(
                                                    ExprName {
                                                        range: 33..34,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                            ],
                                            value: NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 37..38,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    FunctionDef(
                                        StmtFunctionDef {
                                            range: 43..82,
                                            is_async: false,
                                            decorator_list: [],
                                            name: Identifier {
                                                id: Name("f"),
                                                range: 47..48,
                                            },
                                            type_params: None,
                                            parameters: Parameters {
                                                range: 48..50,
                                                posonlyargs: [],
                                                args: [],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                            },
                                            returns: None,
                                            body: [
                                                Global(
                                                    StmtGlobal {
                                                        range: 60..68,
                                                        names: [
                                                            Identifier {
                                                                id: Name("x"),
                                                                range: 67..68,
                                                            },
                                                        ],
                                                    },
                                                ),
                                                Assign(
                                                    StmtAssign {
                                                        range: 77..82,
                                                        targets: [
                                                            Name(
                                                                ExprName {
                                                                    range: 77..78,
                                                                    id: Name("x"),
                                                                    ctx: Store,
                                                                },
                                                            ),
                                                        ],
                                                        value: NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 81..82,
                                                                value: Int(
                                                                    2,
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
        ],
    },
)
```
